--- a/index.html
+++ b/index.html
@@ -40,26 +40,34 @@
 
       <section>
         <h2>What do we offer?</h2>
-        <h3>ATTENTION TO DETAILS</h3>
-        <p>
-          We go into all the details and processes of your business to develop a
-          customized solution.
-        </p>
-        <h3>PUNCTUALITY</h3>
-        <p>
-          With us, you can feel safe and secure. An important principle of the
-          company: respect your time and deadlines.
-        </p>
-        <h3>PLANNING</h3>
-        <p>
-          You will be able to observe and participate in every phase of solution
-          development and implementation.
-        </p>
-        <h3>MODERN TECHNOLOGIES</h3>
-        <p>
-          We use innovative tools to solve assigned tasks. It's time to simplify
-          work processes.
-        </p>
+        <div>
+          <h3>ATTENTION TO DETAILS</h3>
+          <p>
+            We go into all the details and processes of your business to develop
+            a customized solution.
+          </p>
+        </div>
+        <div>
+          <h3>PUNCTUALITY</h3>
+          <p>
+            With us, you can feel safe and secure. An important principle of the
+            company: respect your time and deadlines.
+          </p>
+        </div>
+        <div>
+          <h3>PLANNING</h3>
+          <p>
+            You will be able to observe and participate in every phase of
+            solution development and implementation.
+          </p>
+        </div>
+        <div>
+          <h3>MODERN TECHNOLOGIES</h3>
+          <p>
+            We use innovative tools to solve assigned tasks. It's time to
+            simplify work processes.
+          </p>
+        </div>
       </section>
       <section>
         <h2>What do we do?</h2>
