--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         >info@devstudio.com</a
       >
       <a
-        href="tel:+1 212-772-4150"
+        href="tel:+12127724150"
         rel="noteopener noreferrer nofollow"
         target="_blank"
         >+1 212-772-4150</a
@@ -122,7 +122,7 @@
         >
         <br />
         <a
-          href="tel:+1 212-772-4150"
+          href="tel:+12127724150"
           rel="noteopener noreferrer nofollow"
           target="_blank"
           >+1 212-772-4150</a
