Attributes for images
Added attributes for images

--- a/index.html
+++ b/index.html
@@ -78,28 +78,32 @@
       <section>
         <h2>Our Team</h2>
         <figure>
-          <img src="images/team-member-1.jpg" alt="Christopher Walker" />
+          <img
+            src="images/team-member-1.jpg"
+            alt="Christopher Walker"
+            width="200"
+          />
           <figcaption>
             <h3>Christopher Walker</h3>
             <span>Product designer</span>
           </figcaption>
         </figure>
         <figure>
-          <img src="images/team-member-2.jpg" alt="Kylie Evans" />
+          <img src="images/team-member-2.jpg" alt="Kylie Evans" width="200" />
           <figcaption>
             <h3>Kylie Evans</h3>
             <span>Frontend Developer</span>
           </figcaption>
         </figure>
         <figure>
-          <img src="images/team-member-3.jpg" alt="Ryan Harris" />
+          <img src="images/team-member-3.jpg" alt="Ryan Harris" width="200" />
           <figcaption>
             <h3>Ryan Harris</h3>
             <span>Marketing</span>
           </figcaption>
         </figure>
         <figure>
-          <img src="images/team-member-4.jpg" alt="Tyler Moore" />
+          <img src="images/team-member-4.jpg" alt="Tyler Moore" width="200" />
           <figcaption>
             <h3>Tyler Moore</h3>
             <span>UI Designer</span>
