Modified the structure for the third section
Modified the structure for the third section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
       </section>
       <section>
         <h2>What do we do?</h2>
-        <img src="images/web-developing.jpg" alt="Developing websites" />
-        <img src="images/app-developing.jpg" alt="Developing mobile apps" />
-        <img src="images/web-design.jpg" alt="Web design" />
+        <ul>
+          <li>
+            <img src="images/web-developing.jpg" alt="Developing websites" />
+          </li>
+          <li>
+            <img src="images/app-developing.jpg" alt="Developing mobile apps" />
+          </li>
+          <li><img src="images/web-design.jpg" alt="Web design" /></li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
